Fix/layout (#763)
* fixed chart padding at none title

* fixed layout bug

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -438,7 +438,7 @@
     position: absolute;
     font-family: Verdana;
     margin: 0;
-    z-index: 500;
+    z-index: 1001;
     .tui-chart-chartExportMenu-button {
       position: absolute;
       width: 24px;
